<com.handy.portal.library.ui.layout.SlideUpPanelLayout
    android:id="@+id/slide_up_panel_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginFragment"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_login_logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/professional_portal"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/login_instructions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/login_instructions_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                />


            <RelativeLayout
                android:id="@+id/phone_input_layout"
                style="@style/LoginTextInputCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.handy.portal.library.ui.widget.PhoneInputTextView
                    android:id="@+id/phone_number_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/very_light_gray"
                    android:clickable="false"
                    android:digits="1234567890"
                    android:ems="12"
                    android:enabled="true"
                    android:gravity="center_horizontal"
                    android:hint="@string/phone_number_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/very_light_gray"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pin_code_input_layout"
                style="@style/LoginTextInputCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                >

                <com.handy.portal.library.ui.widget.PinCodeInputTextView
                    android:id="@+id/pin_code_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/very_light_gray"
                    android:ems="12"
                    android:gravity="center_horizontal"
                    android:hint="@string/pin_code_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/very_light_gray"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/Button.Green.Round"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/request_pin"
                android:textAllCaps="false"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/login_help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/login_need_help"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

        </LinearLayout>

    </RelativeLayout>
</com.handy.portal.library.ui.layout.SlideUpPanelLayout>
