<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_padding"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="2"
            >

            <com.handy.portal.library.ui.view.FormFieldTableRow
                android:id="@+id/debit_card_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_no_side"
                />

            <com.handy.portal.library.ui.view.DateFormFieldTableRow
                android:id="@+id/expiration_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_bottom"
                />

            <com.handy.portal.library.ui.view.FormFieldTableRow
                android:id="@+id/security_code_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_bottom"
                />

            <com.handy.portal.library.ui.view.FormFieldTableRow
                android:id="@+id/tax_id_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_gray_bottom"
                />
        </TableLayout>

        <Button
            android:id="@+id/payments_update_info_debit_card_submit_button"
            style="@style/Button.Green.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/add_debit_card"
            />
    </LinearLayout>
</ScrollView>
