<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/payment_method_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_margin"
    android:background="@color/handy_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/debit_card_option"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_payment_method_option"
        android:clickable="true"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/debit_card"
            android:textAppearance="@style/TextView.Bold"
            android:textSize="@dimen/large_text_size"/>

        <TextView
            android:id="@+id/debit_card_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/extra_margin"
            android:layout_toLeftOf="@+id/debit_card_chevron"
            android:layout_toStartOf="@+id/debit_card_chevron"
            android:textSize="@dimen/large_text_size"/>

        <ImageView
            android:id="@+id/debit_card_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bank_account_option"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_list_entry"
        android:clickable="true"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bank_account"
            android:textAppearance="@style/TextView.Bold"
            android:textSize="@dimen/large_text_size"/>

        <TextView
            android:id="@+id/bank_account_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/extra_margin"
            android:layout_toLeftOf="@+id/bank_account_chevron"
            android:layout_toStartOf="@+id/bank_account_chevron"
            android:textSize="@dimen/large_text_size"/>

        <ImageView
            android:id="@+id/bank_account_chevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_black"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/update_payment_method_note"
        android:textColor="@color/subtitle_grey"
        android:textSize="@dimen/small_text_size"/>

</LinearLayout>
